--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   web:
     build: .
@@ -11,3 +9,4 @@ services:
       - FLASK_ENV=development
       - FLASK_DEBUG=1
     command: python app.py
+    restart: unless-stopped
